# REE

./: .gitignore  Prompts_Gemini_Densimetro.md  README.md  prompts_gemini_densimetro.py  setup_project.sh
Simulacion_Barrido/: CMakeLists.txt  run_background.mac  scan_ree.mac
Simulacion_Barrido/Resultados1/: analisis.cpp  analisis_Am241.cpp  log_produccion.txt
Simulacion_Barrido/Resultados2/: analisis_LaBr3_ROI.cpp  analisis_dual.cpp  analisis_final.cpp  debug_transmision.cpp  scan_ree.mac
Simulacion_Barrido/include/: ActionInitialization.hh  PrimaryGeneratorAction.hh  RunAction.hh
Simulacion_Barrido/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
Simulacion_Europio/: CMakeLists.txt  NOTAS_Eu152.md  main.cc  run_Eu152.mac  run_background.mac  run_scan_fino.sh
Simulacion_Europio/Plots/: Eu152_v4_resultados.csv  Eu152_v4_resultados_1_4.csv
Simulacion_Europio/Root/: AnalisisEu152_v6.cpp  AnalisisEu152_v6_comparacion_errores.cpp  Correccion_LOD_v2.md  graficos_CMP.cpp
Simulacion_Europio/analisis/: AnalisisEu152.cpp  AnalisisEu152_v5-NoFunciono.cpp
Simulacion_Europio/include/: DetectorConstruction.hh  EventAction.hh  SteppingAction.hh
Simulacion_Europio/src/: ActionInitialization.cc  EventAction.cc  PhysicsList.cc  RunAction.cc  SteppingAction.cc
Simulacion_TierrasRaras/: CMakeLists.txt  experimento_REE.mac  main.cc
Simulacion_TierrasRaras/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
Simulacion_TierrasRaras/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
